add shuffling